Add game status

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <script src="setting.js"></script>
     <script src="shooter.js"></script>
+    <script src="bullet.js"></script>
     <script src="sketch.js"></script>
   
 
